@@ -23,6 +23,7 @@
 			<label index="groupProfile_groupInformation">Group Information</label>
 			<label index="groupProfile_memberList">Member List</label>
 			<label index="privacy">Privacy</label>
+			<label index="invite">Send Invitations</label>
 			<label index="editGroup">Edit group</label>
 			<label index="createGroup">Crearte Group</label>
 			<label index="listGroups">Group List</label>
