@@ -1,0 +1,25 @@
+<?xml version="1.0" encoding="utf-8" standalone="yes" ?>
+<T3locallang>
+	<meta type="array">
+		<type>module</type>
+		<description>Language labels for the invite application</description>
+	</meta>
+	<data type="array">
+		<languageKey index="default" type="array">
+			<label index="invite_name">Name</label>
+			<label index="invite_email">Email</label>
+			<label index="invite_formSubmitInvite">Invite!</label>
+			<label index="invite_message_error">We're sorry, but we really need a name and an email to send you invitation.</label>
+			<label index="invite_message_success">Thanks for recommending us to your friend, an invitation is on the way.</label>
+			<label index="invite_email_subject">Invitation to ###COMMUNITY_NAME### from ###USER.combinedName###</label>
+			<label index="invite_email_body">Hello ###NAME###
+
+This is an invitation from ###USER.combinedName### to join the ###COMMUNITY_NAME### community.
+Use the link below to sign up:
+
+###REGISTRATION_LINK###
+
+			</label>
+		</languageKey>
+	</data>
+</T3locallang>
