@@ -8,6 +8,7 @@
 	* added custom size image actions o the user and group profile image widgets
 	* fixed handling of user images, if the user has no image, a default image is used now
 	* set default images for the group and user profile image widgets
+	* added an invite application
 
 2008-10-07 Frank Naegler  <typo3@naegler.net>
 
